--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blackjack</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Blackjack</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <h1>Blackjack</h1>
+
   <body>
-    <h1>Hello, World!</h1>
+    <button class='hit'>hit</button>
+    <button class='stay'>stay</button>
+    <ul class='player-hand'>
+      <li>The Player Has:</li>
+    </ul>
+
+    <ul class='dealer-hand'>
+      <li>The Dealer Has:</li>
+    </ul>
     <script src="/main.js" charset="utf-8"></script>
   </body>
+
 </html>
