--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blackjack</title>
   <link rel="stylesheet" href="/screen.css">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Ultra" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
+
+
 </head>
 
 <body>
