Fully responsive and functional

--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,20 @@
   <div class="play-area">
     <div class="left">
       <button class="hit">Hit</button>
-      <ul class="player-hand">
-        <li>The Player Has:</li>
-        <li class="player-total">Total 0</li>
-      </ul>
+      <p>Your Cards:</p>
+      <p class="player-total">Total 0</p>
+      <div class="player-hand">
+      </div>
     </div>
 
     <div class="right">
       <button class="stay">Stay</button>
-      <ul class="dealer-hand">
-        <li>The Dealer Has:</li>
-        <li class="dealer-total">Cards Facedown</li>
-      </ul>
+      <p>Dealer Cards:</p>
+      <p class="dealer-total">Facedown</p>
+      <div class="dealer-hand">
+        <img class="cardback-one" src="./images/card back red.png" />
+        <img class="cardback-two" src="./images/card back red.png" />
+      </div>
     </div>
   </div>
 
